--- a/Makefile.in
+++ b/Makefile.in
@@ -326,7 +326,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL NEWS README.md
 SUBDIRS = bin
-dicdir = $(prefix)/$(PACKAGE)/dic
+dicdir = $(datadir)/$(PACKAGE)/dic
 dic_DATA = sinsy/dic/*.conf sinsy/dic/*.table sinsy/dic/*.macron
 DISTCLEANFILES = *.log *.out *~ config/*~ include/*~
 MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in config/compile \
